<resources>
  <string name="app_name">EMGAndAngleMeasuring</string>
  <string name="emg_angle_measuring"><![CDATA[EMG&Angle Measuring]]></string>
  <string name="text_collect_start">启动</string>
  <string name="text_collect_stop">启动</string>
  <string name="setting_params">设置参数</string>
  <string name="collect_angle">校准角度</string>
  <string name="show_time_length">显示时间长度</string>
  <string name="emg_scale_range">EMG刻度范围</string>
  <string name="second">s</string>
  <string name="mv">mV</string>
  <string name="cap_scale_range">电容刻度范围</string>
  <string name="pf">pF</string>
  <string name="save_sample_data">记录采样数据</string>
  <string name="global_setting">全局设置</string>
  <string name="text_angle_mv">量程(mV)</string>
  <string name="text_ref_electrode_status">REF电极状态</string>
  <string name="text_electrode_status_off">已脱落</string>
  <string name="text_electrode_status_on">未脱落</string>
  <string name="text_channel_opened">通道开启</string>
  <string name="text_high_pass_filtering">高通滤波</string>
  <string name="text_power_frequency_notch">工频陷波</string>
  <string name="text_real_angle_unit">实际角度（度）</string>
  <string name="text_capacitance_tip">电容值(pF)</string>
  <string name="text_step_one">第一步: 腿伸直, 保持膝盖关节角度为0度</string>
  <string name="text_step_two">第二步: 腿伸直, 保持膝盖关节角度为90度</string>
  <string name="text_calibrate_auto">自动检测</string>
  <string name="text_sure">确定</string>
  <string name="text_next_step">下一步</string>
  <string name="text_emg">EMG</string>
  <string name="text_capacitance">电容</string>
  <string name="text_heng">-</string>
  <string name="text_electrode_on">电极未脱落</string>
  <string name="text_electrode_off">电极脱落</string>
  <string name="text_search_hint">搜索文件名/日期</string>
  <string name="text_please_file_name">请输入文件名</string>
  <string name="text_cancel">取消</string>
  <string name="text_enter_the_file_name_here">在此输入文件名</string>
  <string name="text_value_zero">0</string>
  <string name="text_value_ninety">90</string>
  <string name="text_complete">完成</string>

</resources>